Removendo código depreciado.